--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,7 @@
         </activity>
         
         <receiver
-            android:name="com.ohmnismart.reciever.ReceiverSMS">   
+            android:name="com.ohmnismart.reciever.ReceiverSms">   
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
