--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,8 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -41,13 +43,10 @@
             android:name="com.ohmnismart.ui.ActivityPreferences"
             android:parentActivityName="com.ohmnismart.ui.ActivityMain" >
         </activity>
+        <activity
+            android:name="com.ohmnismart.ui.ActivityAlarm" >
+        </activity>
         
-        <receiver
-            android:name="com.ohmnismart.reciever.ReceiverAlarm" >
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-            </intent-filter>
-        </receiver>
         <receiver
             android:name="com.ohmnismart.reciever.ReceiverBoot"
             android:enabled="false" >
