--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.ohmnismart.ui.ActivityMain"
+            android:name="com.globe.ui.ActivityMain"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,22 +40,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.ohmnismart.ui.ActivityPreferences"
-            android:parentActivityName="com.ohmnismart.ui.ActivityMain" >
+            android:name="com.globe.ui.ActivityPreferences"
+            android:parentActivityName="com.globe.ui.ActivityMain" >
         </activity>
         <activity
-            android:name="com.ohmnismart.ui.ActivityAlarm" >
+            android:name="com.globe.ui.ActivityAlarm" >
         </activity>
         
         <receiver
-            android:name="com.ohmnismart.reciever.ReceiverSms">   
+            android:name="com.globe.reciever.ReceiverSms">   
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
         
         <receiver
-            android:name="com.ohmnismart.reciever.ReceiverBoot"
+            android:name="com.globe.reciever.ReceiverBoot"
             android:enabled="false" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -63,7 +63,7 @@
         </receiver>
         
 		<service
-		    android:name="com.ohmnismart.service.ServiceUSSD"
+		    android:name="com.globe.service.ServiceUSSD"
 		    android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
 		    <intent-filter>
 		        <action android:name="android.accessibilityservice.AccessibilityService" />
