--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,9 @@
             android:name="com.globe.ui.ActivityPreferences"
             android:parentActivityName="com.globe.ui.ActivityMain" >
         </activity>
+        <activity
+            android:name="com.globe.ui.ActivityAlarm" >
+        </activity>
         
         <receiver
             android:name="com.globe.reciever.ReceiverSms">   
@@ -64,15 +67,10 @@
         </receiver>
         
         <receiver
-            android:name="com.globe.reciever.ReceiverAlarm"
-            android:enabled="true"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.ALARM_CALLED"/>
-            </intent-filter>
+            android:name="com.globe.reciever.ReceiverAlarm">
         </receiver>
         
-        		<service
+   		<service
 		    android:name="com.globe.service.ServiceUSSD"
 		    android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
 		    <intent-filter>
